[project]
    authors = [ { name = "Snaptraks" } ]
    dependencies = [
        "discord-py>=2.6.4",
        "pillow>=11.3.0",
        "snapcogs[all]",
        "sqlalchemy[asyncio]>=2.0.38",
        "tabulate>=0.9.0",
    ]
    description = "Discord bot for the Hatventures Community server"
    name = "hatbot"
    readme = "README.md"
    requires-python = ">=3.13"
    version = "2025.09.11"

[dependency-groups]
    dev = [
        "rich>=14.1.0",
    ]

[tool.uv.sources]
    snapcogs = { git = "https://github.com/Snaptraks/SnapCogs.git", rev = "master" }

[tool.ruff.lint]
    ignore = [
        "D417",    # undocumented-param
        "G004",    # logging-f-strings
        "PLR2004", # magic-value-comparison
        "S101",    # assert
        "S311",    # suspicious-non-cryptographic-random-usage
        "SLF001",  # private-member-access
    ]
